--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -134,7 +134,7 @@
           </a>
         </td>
         <td width="300px">
-          <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container">
+          <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container" width="300px">
         </td>
       </tr>
     </table>
@@ -166,7 +166,7 @@
           </a>
         </td>
         <td width="300px">
-          <img src="https://projectr4vival.github.io/r4ultra/ysmenu.jpg" id="container">
+          <img src="https://projectr4vival.github.io/r4ultra/ysmenu.jpg" id="container" width="300px">
         </td>
       </tr>
     </table>
