--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -120,7 +120,7 @@
 
           <br>
 
-          <p><i>Setup</i></p>
+          <p id="title"><i>Setup</i></p>
           <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
           <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
 
@@ -152,7 +152,7 @@
 
           <br>
 
-          <p><i>Setup</i></p>
+          <p id="title"><i>Setup</i></p>
           <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
           <img src="https://projectr4vival.github.io/r4ultra/files_ysmenu.jpg" id="container">
 
