--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -121,7 +121,7 @@
           <br>
 
           <p id="subtitle"><i>Setup</i></p>
-          <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
+          <p>To install the kernel, extract the archive and place these files in the root of your sd card.</p>
           <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
 
           <br>
@@ -153,7 +153,7 @@
           <br>
 
           <p id="subtitle"><i>Setup</i></p>
-          <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
+          <p>To install the kernel, extract the archive and place these files in the root of your sd card.</p>
           <img src="https://projectr4vival.github.io/r4ultra/files_ysmenu.jpg" id="container">
 
           <br>
