--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       A flashcard, which is the abbreviation of flash cartridge, is a cartridge containing a flash memory that has been developed for use in video game consoles. A DS flashcard, is a Nintendo DS type cartridge that can bypass the console blocks to run homebrew software and backup copies of games that are placed on a microsd. The original flashcards, like the first R4 were able to read only microsd cards up to 2gb; the latest ones are usually able to read SDHC, so microsd cards up to 32gb of storage. At the moment there's no flashcard capable of running DSiWare games.
     </p>
     <br>
-    <p><b>Where can i find games for my flashcard?</b></p>
+    <p><b>Where can I find games for my flashcard?</b></p>
     <p>
       I don't know but for sure not here. We do not support nor condone piracy. Even if it's true that a flashcard can run ROM images of games, they should be used only to run backup copies of your games. Those are a right of users, in case they don't want to ruin the games they bought, especially considering how fragile are Nintendo DS cartridges and slot.
       <br>
