--- a/index.html
+++ b/index.html
@@ -67,29 +67,27 @@
     <p>
       Well, here's how it goes for most flashcards. 
       <br>
-      A young and willing team create a new flashcard. People start buying it, and the flashcard start to get a reputation. 
+      A young and willing team creates a new flashcard. People start buying it, and the flashcard starts to get a reputation. 
       <br>
       Clones start to be created, making money on a stolen name. 
       <br>
-      The market of the original team gets ruined, and after some times that it can't deal with clones, the team stop supporting the card, updates are always more rarily released, and in the end, the whole website and team completely disappear from the internet. 
+      The market of the original team gets ruined, and after some time that it can't deal with clones, the team stops supporting the card, updates are always more rarily released, and in the end, the whole website and team completely disappear from the internet. 
       <br>
-      At this point clone makers have made some money, but as the original card has no more updates, their won't have them, too. But clone cards weren't make to last, but only to make money off them. Even the clones teams completely disappear from internet. 
+      At this point clone makers have made some money, but as the original card has no more updates, their won't have them, too. But clone cards weren't make to last, but only to make money off them. Even clones teams completely disappear from internet. 
       <br>
-      After everything's done, find a kernel or a firmware update for who bought one of the cards becomes nasty. Maybe you lost the original SD, or it broke, or you formatted it by accident, and now you can't find the right files anymore and your card feels like completely useless or bricked.
+      After everything's done, finding a kernel or a firmware update for who bought one of the cards becomes nasty. Maybe you lost the original SD, or it broke, or you formatted it by accident, and now you can't find the right files anymore and your card feels like completely useless or bricked.
       <br>
-      Here you can now search for your card, and find again your kernel.
-      <br>
-      As you're here, this could have happened to you, too.
+      Here you can now search for your card, and find again its kernel.
     </p>
       <br>
     <p><b>What is a flashcard?</b></p>
     <p>
-      A flashcard, which is the abbreviation of flash cartridge, is a cartridge containing a flash memory that has been developed for use in video game consoles. A DS flashcard, is a Nintendo DS type cartridge that can bypass the console blocks to run homebrew software and backup copies of games that are placed on a microsd. The original flashcards, like the first R4 were able to read only microsd cards up to 2gb; the latest ones are usually able to read SDHC, so microsd cards up to 32gb of storage. At the moment there's no flashcard capable of running DSiWare games.
+      A flashcard, which is the abbreviation of flash cartridge, is a cartridge containing a flash memory that has been developed to be used in video game consoles. A DS flashcard, is a Nintendo DS type cartridge that can bypass the console blocks to run homebrew softwares and backup copies of games that are placed on a microSD. The original flashcards, like the first R4 were able to read only microsd cards up to 2gb; the latest ones are usually able to read SDHC ones, so microSD cards up to 32gb of storage. At the moment there's no flashcard capable of running DSiWare games.
     </p>
     <br>
     <p><b>Where can I find games for my flashcard?</b></p>
     <p>
-      I don't know but for sure not here. We do not support nor condone piracy. Even if it's true that a flashcard can run ROM images of games, they should be used only to run backup copies of your games. Those are a right of users, in case they don't want to ruin the games they bought, especially considering how fragile are Nintendo DS cartridges and slot.
+      I don't know but for sure not here. We do not support nor condone piracy. Even if it's true that a flashcard can run ROM images of games, they should be used only to run backup copies of your games. Those are a users' right, in case they don't want to ruin the games they bought, especially considering how fragile are Nintendo DS cartridges and slot.
       <br>
       This project is about preservation, not piracy.
     </p>
