--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -54,8 +54,9 @@
           <ul>
             <li><a href="#kernel">Kernel</a></li>
             <li><a href="#kernel">Firmware Update</a></li>
-            <li><a href="#kernel">Kernel</a></li>
-            <li><a href="#kernel">Kernel</a></li>
+            <li><a href="#kernel">NTRBoot Compatibility (+ flashrom backup)</a></li>
+            <li><a href="#kernel">Other</a></li>
+            <li><a href="#kernel">Gallery</a></li>
           </ul>
         </td>
         <td width="300px">
