--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -171,6 +171,49 @@
         </td>
       </tr>
     </table>
+
+    <br>
+    <hr>
+    <br>
+
+    <table width="100%">
+      <tr>
+        <td align = left style="padding-right: 60px">
+          <p id="title"><b>Official Kernel</b></p>
+
+          <p>This is the latest R4i Ultra official kernel, the release data of v1.56 is 09/25/2010.</p>
+
+          <br>
+
+          <p id="subtitle"><i>Setup</i></p>
+          <p>To install the kernel, extract the archive and place these files in the root of your sd card.</p>
+          <img src="https://projectr4vival.github.io/r4ultra/files_official.jpg" id="container">
+
+          <br>
+          <br>
+
+          <a id="title" href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/en_1.56.rar?raw=true">
+            <div id="button">
+              <img src="https://projectr4vival.github.io/download.svg" height="20px"> Download
+            </div>
+          </a>
+
+          <input class="spoilerbutton" type="button" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">
+          <div class="spoiler">
+            <div>
+              <p>Bababoi</p>
+              <p>Bababoi</p>
+              <p>Bababoi</p>
+              <p>Bababoi</p>
+            </div>
+          </div>
+
+        </td>
+        <td width="300px">
+          <img src="https://projectr4vival.github.io/r4ultra/official.jpg" id="container" width="300px">
+        </td>
+      </tr>
+    </table>
     
 
   </div>
