--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
     <p>The best place where to find the right kernel for your flashcard.</p>
   </div>
   <div id = "content">
-    <p><b>What is Project R4vival?</b></p>
+    <p id="title">What is Project R4vival?</p>
     <p>
       Project R4vival is a website that aims to give life back to your flashcard. Even if the name comes from the most iconic flashcard, the R4, it wants to completely cover every Nintendo DS and 3DS flashcart under this point.
     </p>
     <br>
     <hr>
     <br>
-    <p><b>Get Started</b></p>
+    <p id="title">Get Started</p>
     <p>
       You can search for the right kernel for your card in our <a href = "kernel">Kernel Database</a>.
       <br>
       Or you can check the <a href = "homebrew">Homebrew</a> section to find out about cool homebrew you can run on your flashcard.
     </p>
     <br>
-    <p><b>Why?</b></p>
+    <p id="title">Why?</p>
     <p>
       Well, here's how it goes for most flashcards. 
       <br>
@@ -80,19 +80,19 @@
       Here you can now search for your card, and find again its kernel.
     </p>
       <br>
-    <p><b>What is a flashcard?</b></p>
+    <p id="title">What is a flashcard?</p>
     <p>
       A flashcard, which is the abbreviation of flash cartridge, is a cartridge containing a flash memory that has been developed to be used in video game consoles. A DS flashcard, is a Nintendo DS type cartridge that can bypass the console blocks to run homebrew softwares and backup copies of games that are placed on a microSD. The original flashcards, like the first R4 were able to read only microsd cards up to 2gb; the latest ones are usually able to read SDHC ones, so microSD cards up to 32gb of storage. At the moment there's no flashcard capable of running DSiWare games.
     </p>
     <br>
-    <p><b>Where can I find games for my flashcard?</b></p>
+    <p id="title">Where can I find games for my flashcard?</p>
     <p>
       I don't know but for sure not here. We do not support nor condone piracy. Even if it's true that a flashcard can run ROM images of games, they should be used only to run backup copies of your games. Those are a users' right, in case they don't want to ruin the games they bought, especially considering how fragile are Nintendo DS cartridges and slot.
       <br>
       This project is about preservation, not piracy.
     </p>
     <br>
-    <p><b>Are flashcards legal?</b></p>
+    <p id="title">Are flashcards legal?</p>
     <p>
       It... depends. Mostly on the country you live in. But in every country is illegal to use them to run ROM images of games you do not physically or digitally own.
       <br>
