--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -111,7 +111,7 @@
     <table width="100%">
       <tr>
         <td align = left style="padding-right: 60px">
-          <p id="title"><b>AKAIO 1.8.6a</b> <i>- Recommended</i></p>
+          <p><div id="title">AKAIO 1.8.6a</div> <i>- Recommended</i></p>
 
           <p>
             As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. 
@@ -147,7 +147,7 @@
     <table width="100%">
       <tr>
         <td align = left style="padding-right: 60px">
-          <p id="title"><b>YSMenu</b></p>
+          <p id="title">YSMenu</p>
 
           <p>This is an old version of the unofficial YSMenu kernel, working on the R4i Ultra.</p>
 
@@ -179,7 +179,7 @@
     <table width="100%">
       <tr>
         <td align = left style="padding-right: 60px">
-          <p id="title"><b>Official Kernel</b></p>
+          <p id="title">Official Kernel</p>
 
           <p>This is the latest R4i Ultra official kernel, the release data of v1.56 is 09/25/2010.</p>
 
