--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -183,7 +183,7 @@
         <td align = left style="padding-right: 60px">
           <p id="title"><b>Official Kernel</b></p>
 
-          <p>This is the latest R4i Ultra official kernel, the release data of v1.56 is 09/25/2010.</p>
+          <p>This is the latest R4i Ultra official kernel, the release data of v1.56 is 25/09/2010.</p>
 
           <br>
 
@@ -203,10 +203,12 @@
           <input class="spoilerbutton" type="button" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">
           <div class="spoiler">
             <div>
-              <p>Bababoi</p>
-              <p>Bababoi</p>
-              <p>Bababoi</p>
-              <p>Bababoi2</p>
+              <p>T.Chinese</p>
+              <p>S.Chinese</p>
+              <p>Japanese</p>
+              <p>Korean</p>
+              <p>French</p>
+              <p>Spanish</p>
             </div>
           </div>
 
