--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -200,7 +200,7 @@
             </a>
           </div>
 
-          <input class="spoilerbutton" type="button" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">
+          <input class="spoilerbutton" id="button" type="button" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">
           <div class="spoiler">
             <div>
               <p>T.Chinese</p>
