--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -129,7 +129,7 @@
           <br>
 
           <div id="button">
-            <a id="title" href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/AKAIO%201.8.6a.R4U.rar?raw=true">
+            <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/AKAIO%201.8.6a.R4U.rar?raw=true">
               <img src="https://projectr4vival.github.io/download.svg" height="20px"> Download  
             </a>
           </div>
@@ -162,7 +162,7 @@
           <br>
 
           <div id="button">
-            <a id="title" href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/YSMenu20171225.rar?raw=true">
+            <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/YSMenu20171225.rar?raw=true">
               <img src="https://projectr4vival.github.io/download.svg" height="20px"> Download
             </a>
           </div>
@@ -195,12 +195,12 @@
           <br>
 
           <div id="button">
-            <a id="title" href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/en_1.56.rar?raw=true">
+            <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/en_1.56.rar?raw=true">
               <img src="https://projectr4vival.github.io/download.svg" height="20px"> Download
             </a>
           </div>
 
-          <input class="spoilerbutton" id="button" type="button" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">
+          <input class="spoilerbutton" type="button" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">
           <div class="spoiler">
             <div>
               <p>T.Chinese</p>
