--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -195,7 +195,7 @@
           <br>
 
           <div id="button">
-            <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/en_1.56.rar?raw=true">
+            <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/en_1.56.rar?raw=true">
               <img src="https://projectr4vival.github.io/download.svg" height="20px"> Download
             </a>
           </div>
