--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -203,7 +203,11 @@
           <input class="spoilerbutton" type="button" value="Other Languages" onclick="this.value=this.value=='Other Languages'?'Hide':'Other Languages';">
           <div class="spoiler">
             <div>
-              <p>T.Chinese</p>
+              <p>
+                <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/lang/ct_1.56.rar?raw=true">
+                  T.Chinese - <img id="container" src="https://projectr4vival.github.io/download.svg" height="20px">
+                </a>
+              </p>
               <p>S.Chinese</p>
               <p>Japanese</p>
               <p>Korean</p>
