--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -205,7 +205,7 @@
             <div>
               <p>
                 <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/lang/ct_1.56.rar?raw=true">
-                  T.Chinese - <img id="container" src="https://projectr4vival.github.io/download.svg" height="20px">
+                  T.Chinese <img id="container" src="https://projectr4vival.github.io/download.svg" height="16px">
                 </a>
               </p>
               <p>S.Chinese</p>
