--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -208,11 +208,31 @@
                   T.Chinese <img src="https://projectr4vival.github.io/download.svg" height="16px">
                 </a>
               </p>
-              <p>S.Chinese</p>
-              <p>Japanese</p>
-              <p>Korean</p>
-              <p>French</p>
-              <p>Spanish</p>
+              <p>
+                <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/lang/cs_1.56.rar?raw=true">
+                  S.Chinese <img src="https://projectr4vival.github.io/download.svg" height="16px">
+                </a>
+              </p>
+              <p>
+                <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/lang/jp_1.56.rar?raw=true">
+                  Japanese <img src="https://projectr4vival.github.io/download.svg" height="16px">
+                </a>
+              </p>
+              <p>
+                <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/lang/kr_1.56.rar?raw=true">
+                  Korean <img src="https://projectr4vival.github.io/download.svg" height="16px">
+                </a>
+              </p>
+              <p>
+                <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/lang/fr_1.56.rar?raw=true">
+                  French <img src="https://projectr4vival.github.io/download.svg" height="16px">
+                </a>
+              </p>
+              <p>
+                <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/lang/es_1.56.rar?raw=true">
+                  Spanish <img src="https://projectr4vival.github.io/download.svg" height="16px">
+                </a>
+              </p>
             </div>
           </div>
 
