--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -56,6 +56,7 @@
             <li><a href="#kernel">Firmware Update</a></li>
             <li><a href="#kernel">NTRBoot Compatibility (+ flashrom backup)</a></li>
             <li><a href="#kernel">Other</a></li>
+            <li><a href="#kernel">PCB</a></li>
             <li><a href="#kernel">Gallery</a></li>
           </ul>
         </td>
