--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -137,7 +137,7 @@
           
         </td>
         <td width="300px">
-          <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container" max-width="300px">
+          <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container" style="max-width: 300px">
         </td>
       </tr>
     </table>
@@ -170,7 +170,7 @@
 
         </td>
         <td width="300px">
-          <img src="https://projectr4vival.github.io/r4ultra/ysmenu.jpg" id="container" max-width="300px">
+          <img src="https://projectr4vival.github.io/r4ultra/ysmenu.jpg" id="container" style="max-width: 300px">
         </td>
       </tr>
     </table>
@@ -239,7 +239,7 @@
 
         </td>
         <td width="300px">
-          <img src="https://projectr4vival.github.io/r4ultra/official.jpg" id="container" max-width="300px">
+          <img src="https://projectr4vival.github.io/r4ultra/official.jpg" id="container" style="max-width: 300px">
         </td>
       </tr>
     </table>
