--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -104,10 +104,7 @@
 
     </table>
 
-    <br>
-    <br>
-
-    <p id="kernel"><h1><i>Kernel</i></h1></p>
+    <p id="kernel" class="omegatitle"><i>Kernel</i></p>
 
     <table width="100%">
       <tr>
