--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -246,7 +246,7 @@
     <p>
       This is the latest firmware update for the flashcard that makes it compatible up to 3DS (and 2DS) firmware v2.1.
       <br>
-      If you have a newer firmware than 2.1 on your 3DS (or 2DS) console, you may want to bypass any flashcard block by installing a custom firmware on your console. Check <a href="https://3ds.hacks.guide/">this guide</a> to know how, and installing lumacfw on your console. This will allow the flashcard to be read again by the console.
+      If you have a newer firmware than 2.1 on your 3DS (or 2DS) console, you may want to bypass any flashcard block by installing a custom firmware on your console. Check <a href="https://3ds.hacks.guide/" target="_blank">this guide</a> to know how, and installing lumacfw on your console. This will allow the flashcard to be read again by the console.
     </p>
 
     <p id="subtitle"><i>Setup</i></p>
@@ -264,6 +264,18 @@
       <br>
       This will prompt you in the update screen.
     </p>
+
+    <img id="myImg" src="https://projectr4vival.github.io/r4ultra/fw1.jpg" alt="Snow" style="width:100%;max-width:300px">
+
+    <div id="myModal" class="modal">
+
+      <span class="close">&times;</span>
+
+      <img class="modal-content" id="img01">
+
+      <!-- Modal Caption (Image Text) -->
+      <div id="caption"></div>
+    </div> 
 
 
 
