--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -265,7 +265,7 @@
       This will prompt you in the update screen.
     </p>
 
-    <img id="myImg" src="https://projectr4vival.github.io/r4ultra/fw1.jpg" alt="Snow" style="width:100%;max-width:300px">
+    <img id="myImg" src="https://projectr4vival.github.io/r4ultra/fw1.jpg" alt="" style="width:100%;max-width:300px">
 
     <div id="myModal" class="modal">
 
