--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -277,8 +277,57 @@
       <div id="caption"></div>
     </div> 
 
+    <p>
+      And the screen pretty explains itself once again.
+      <br>
+      If you don't want to update, press any other key, otherwise press Start.
+      <br>
+      This will start the update procedure, wait until it finishes.
+    </p>
 
+    <img id="myImg" src="https://projectr4vival.github.io/r4ultra/fw2.jpg" alt="" style="width:100%;max-width:300px">
 
+    <div id="myModal" class="modal">
+
+      <span class="close">&times;</span>
+
+      <img class="modal-content" id="img01">
+
+      <!-- Modal Caption (Image Text) -->
+      <div id="caption"></div>
+    </div> 
+
+    <img id="myImg" src="https://projectr4vival.github.io/r4ultra/fw3.jpg" alt="" style="width:100%;max-width:300px">
+
+    <div id="myModal" class="modal">
+
+      <span class="close">&times;</span>
+
+      <img class="modal-content" id="img01">
+
+      <!-- Modal Caption (Image Text) -->
+      <div id="caption"></div>
+    </div>
+
+    <p>
+      Once it get to 100%, the update procedure is finally done.
+    </p>
+
+    <img id="myImg" src="https://projectr4vival.github.io/r4ultra/fw4.jpg" alt="" style="width:100%;max-width:300px">
+
+    <div id="myModal" class="modal">
+
+      <span class="close">&times;</span>
+
+      <img class="modal-content" id="img01">
+
+      <!-- Modal Caption (Image Text) -->
+      <div id="caption"></div>
+    </div>
+
+    <p>
+      You can now reboot your console and the flashcard will be updated. Most of the times, you can see the flashcard has updated because the bootrom should have changed, so you'll probably see a different game for it in the home menu.
+    </p>
     
 
   </div>
