--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
 <body>
 
+  <div id = "main">
+
   <div id = "header"></div>
 
   <div id = "banner">
@@ -102,6 +104,8 @@
   </div>
 
   <div id = "footer"></div>
+
+  </div>
 
 </body>
 
