--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
   <div id = "header"></div>
 
   <div id = "banner">
-    <p><h1>Project R4vival</h1></p>
-    <p>The best place where to find the right kernel for your flashcard.</p>
+    <div id = "content">
+      <p><h1>Project R4vival</h1></p>
+      <p>The best place where to find the right kernel for your flashcard.</p>
+    </div>
   </div>
-  
+
   <div id = "content">
     <p><b>What is Project R4vival?</b></p>
     <p>
