--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset = "utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" /> <!-- For mobile media queries -->
   <link rel="icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" /> <!-- To support IE as well -->
   <title>Project R4vival</title>
