--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -52,7 +52,7 @@
           <img src="logo.png">
         </td>
         <td align = right>
-          <img src="banner.png">
+          <img src="banner.png" style="object-fit: contain">
         </td> 
       </tr>
     </table>
