--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset = "utf-8">
-  <meta name="viewport" content="width=device-width" /> <!-- For mobile adapting , initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0-->
+  <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86" /> <!-- For mobile adapting -->
   <link rel="icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" /> <!-- To support IE as well -->
   <title>Project R4vival</title>
