--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <br>
     <p><b>What is a flashcard?</b></p>
     <p>
-      A flashcard, which is the abbreviation of flash cartridge, is a cartridge containing a flash memory that has been developed to be used in video game consoles. A DS flashcard, is a Nintendo DS type cartridge that can bypass the console blocks to run homebrew softwares and backup copies of games that are placed on a microSD. The original flashcards, like the first R4 were able to read only microsd cards up to 2gb; the latest ones are usually able to read SDHC ones, so microSD cards up to 32gb of storage. At the moment there's no flashcard capable of running DSiWare games.
+      A flashcard, which is the abbreviation of flash cartridge, is a cartridge containing a flash memory that has been developed to be used in video game consoles. A DS flashcard, is a Nintendo DS type cartridge that can bypass the console blocks to run homebrew softwares and backup copies of games that are placed on a microSD. The original flashcards, like the first R4 were able to read only microSD cards up to 2gb; the latest ones are usually able to read SDHC ones, so microSD cards up to 32gb of storage. At the moment there's no flashcard capable of running DSiWare games.
     </p>
     <br>
     <p><b>Where can I find games for my flashcard?</b></p>
