Changing Content ID to Class

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
   <div id = "header"></div>
 
   <div id = "banner">
-    <div id = "content">
+    <div class = "content">
       <p><h1>Project R4vival</h1></p>
       <p>The best place where to find the right kernel for your flashcard.</p>
     </div>
   </div>
 
-  <div id = "content">
+  <div class = "content">
     <p><b>What is Project R4vival?</b></p>
     <p>
       Project R4vival is a website that aims to give life back to your flashcard. Even if the name comes from the most iconic flashcard, the R4, it wants to completely cover every Nintendo DS and 3DS flashcart under this point.
