Change Content ID to Class #2

--- a/kernel.html
+++ b/kernel.html
@@ -44,7 +44,7 @@
 
   <div id = "header"></div>
 
-  <div id = "content">
+  <div class = "content">
 
     <p><b>What's a Kernel?</b></p>
     <p>A kernel is the software on your R4 that lets you run .nds files through it. You can think of it as the operating system of your flashcard, or, simplier, as its menu. The flashcard boots the kernel right after it's run from your console menu. So if the right kernel isn't installed on your sd card, the R4 won't boot up and will most likely give an error.</p>
