--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -44,7 +44,7 @@
 
   <div id = "header"></div>
 
-  <div id = "content">
+  <div class = "content">
 
     <table id = "container" width="100%">
       <tr>
