Adding a scroll up button

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 
   <div id = "footer"></div>
 
+  <div onclick="topFunction()" id="scrollButton" title="Go to top">^</div> 
+
 </body>
 
 </html>
