--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <div id = "footer"></div>
 
-  <div onclick="topFunction()" id="scrollButton" title="Go to top"><img src = "https://projectr4vival.github.io/language.svg"></div> 
+  <img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" id="scrollButton" title="Go to top">
 
 </body>
 
