--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   </div>
 
-  <img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" id="scrollButton" title="Go to top">
+  <div id="scrollButton"><img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" title="Go to top"></div>
 
   <div id = "footer"></div>
 
