--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   </div>
 
-  <div id="scrollButton"><img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" title="Go to top"></div>
+  <button id = "scrollButton"><img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" title="Go to top"></button>
 
   <div id = "footer"></div>
 
