--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   </div>
 
-  <div id = "scrollButton"><img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" title="Go to top"></div>
+  <img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" id = "scrollButton" title="Go to top">
 
   <div id = "footer"></div>
 
