--- a/kernel.html
+++ b/kernel.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset = "utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86" /> <!-- For mobile adapting -->
   <link rel="icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" /> <!-- To support IE as well -->
   <title>Kernel - Project R4vival</title>
@@ -73,6 +74,8 @@
     </ul>
 
   </div>
+
+  <img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" id = "scrollButton" title="Go to top">
 
   <div id = "footer"></div>
 
