--- a/kernel.html
+++ b/kernel.html
@@ -38,6 +38,7 @@
 
   ">
   <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
+  <link href="https://projectr4vival.github.io/queries.css" rel = "stylesheet">
   <script src="https://projectr4vival.github.io/script.js" defer></script>
 </head>
 
