Adding Media Queries

--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset = "utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86" /> <!-- For mobile adapting -->
   <link rel="icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" /> <!-- To support IE as well -->
   <title>R4i Ultra - Project R4vival</title>
@@ -37,6 +38,7 @@
 
   ">
   <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
+  <link href="https://projectr4vival.github.io/queries.css" rel = "stylesheet">
   <script src="https://projectr4vival.github.io/script.js" defer></script>
 </head>
 
@@ -332,6 +334,7 @@
 
   </div>
 
+  <img src = "https://projectr4vival.github.io/arrowup.svg" onclick="topFunction()" id = "scrollButton" title="Go to top">
 
   <div id = "footer"></div>
 
